--- a/pages/playpage/playpage.wxss
+++ b/pages/playpage/playpage.wxss
@@ -68,18 +68,30 @@ box-shadow: 3rpx 5rpx 20rpx #31C27C;
   width:100%;
   height:90rpx;
   background: #31C27C;
+  display: flex;
   position: fixed;
   bottom:0;
-  padding: 40rpx 75rpx;
+  padding: 40rpx 12rpx;
   box-shadow: 3rpx 5rpx 20rpx #31C27C;
 }
-.btnBox image{
-  display:block;
-  width:100rpx;
-  height:100rpx;
-  float:left;
+.btnBox #change{
+  width: 50rpx;
+  height: 50rpx;
+  padding: 20rpx 0 0 0;
+  margin:0 30rpx;
+}
+.btnBox #play{
+  width: 90rpx;
+  height: 90rpx;
   margin:0 50rpx;
 }
+.btnBox #interactive{
+  width: 60rpx;
+  height: 60rpx;
+  margin:0 50rpx;
+  padding: 12rpx 0 0 0;
+}
+
 .imgitem .clear
 {
 animation-play-state: paused;
